--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -2,8 +2,8 @@
 
           <div class="container col-xxl-9 text-white text-center py-5">
                <p style="font-size: clamp(70px,10vw,150px) ; line-height: 1;" class="fw-bold p-0 mt-5">PROJECT SEED</p>
-               <p style="font-size: clamp(10px,10vw,30px);" class="fw-lighter">JELLY ACE GROUP</p>
-               <button class="discover-btn btn">DISCOVER</button>
+               <p style="max-width: 500px; margin: auto;" class="fw-lighter text-center">Curious about permaculture? Dive into our interactive web app and learn how to transform your backyard into a thriving, sustainable ecosystem!</p>
+               <button class="discover-btn btn mt-3">Discover</button>
           </div>
      </section>
 
@@ -15,10 +15,8 @@
                </div>
                <div class="features-card col">
                     <div class="">
-                         <p class="fw-bold">Phasellus accumsan imperdiet tempor. Cras tincidunt, arcu nec eleifend porttitor, orci est vehicula </p>
-                         <p class="lg-text">Proin id ligula dictum, convallis enim ut, facilisis massa. Mauris a nisi ut sapien blandit imperdie
-                              Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed posuere egestas nunc ut tempus.
-                         </p>
+                         <p class="fw-bold">About JellyAce</p>
+                         <p class="lg-text">Project SEED is an interactive web app designed to help users learn and apply permaculture principles in their backyards, promoting sustainable gardening and fostering eco-friendly communities through personalized guidance, resources, and practical tools. </p>
                     </div>
                     <div class="d-flex justify-content-between features-img row mt-5">
                          <div class="cards col">
