--- a/views/partials/UserHeader.ejs
+++ b/views/partials/UserHeader.ejs
@@ -27,7 +27,7 @@
         <!-- Sidebar -->
         <div style="background-color: #59A645;" class="border-right" id="sidebar-wrapper">
             <div class="sidebar-heading d-flex justify-content-center">
-                <img src="/images/logo-user.svg" alt="" style="width: 40px;">
+                <a href="/tutorial"><img src="/images/logo-user.svg" alt="" style="width: 40px;"></a>
             </div>
             <div class="list-group list-group-flush d-grid gap-3 mt-4 sideNav">
                 <a href="/dashboard" class="side-nav-item text-white"><img src="/images/Dashboard-nav.svg" alt="" width="30px"></a>
@@ -57,7 +57,6 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
                             <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#changeProfileModal">Change Profile</a></li>
-                            <li><a class="dropdown-item" href="/change-password">Change Password</a></li>
                             <li><a class="dropdown-item" href="/logout">Logout</a></li>
                         </ul>
                     </div>
