--- a/views/tutorial.ejs
+++ b/views/tutorial.ejs
@@ -10,6 +10,17 @@
 </head>
 <body>
 
+    <section id="tut" class="section" style="z-index: 999;">
+        <div class="row m-0 vh-100">
+            <div class="col d-flex justify-content-center align-items-center">
+                <div class="content-text text-white p-3" style="max-width: 530px;">
+                    <p class="h2 nexa-black text-center">MGA HAKBANG SA PAGSISIMULA NG PERMAKULTURA SA LIKOD BAHAY</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <section id="tut1" class="section">
         <div class="row m-0 vh-100">
             <div class="text-center top-buttons">
@@ -20,8 +31,8 @@
             </div>
             <div class="col d-flex justify-content-center align-items-center">
                 <div class="content-text text-white p-3" style="max-width: 530px;">
-                    <p class="h2">Paano Gumawa ng Plot</p>
-                    <p>Pumili ng lugar na patag upang maiwasan ang erosyon, may sapat na sikat ng araw, ngunit may lilim na bahagi rin para sa mga sensitibong tanim, may maayos na daloy ng tubig, at malapit sa bahay para sa madaliang pagpunta.</p>    
+                    <p class="h2 nexa-black">Hakbang 1: Pagpili ng Lokasyon</p>
+                    <p>Pumili ng lugar na patag upang maiwasan ang erosyon, may sapat na sikat ng araw, ngunit may lilim na bahagi rin para sa mga sensitibong tanim, may maayos na daloy ng tubig, at malapit sa bahay para sa madaliang pagpunta.                    </p>    
                 </div>
             </div>
         </div>
@@ -34,8 +45,8 @@
             </div>
             <div class="col d-flex justify-content-center align-items-center">
                 <div class="content-text text-white p-3" style="max-width: 530px;">
-                    <p class="h2">Paano Gumawa ng Plot</p>
-                    <p>Pumili ng lugar na patag upang maiwasan ang erosyon, may sapat na sikat ng araw, ngunit may lilim na bahagi rin para sa mga sensitibong tanim.</p>    
+                    <p class="h2 nexa-black">Hakbang 2: Pagpaplano ng Pananim</p>
+                    <p>Paikutin ang mga pananim bawat taon upang mapanatili ang kalusugan ng lupa. Isaalang-alang din ang pagtatanim ayon sa tamang panahon, at magtanim ng mga halaman na umaangkop sa klima sa bawat panahon.                   </p>    
                 </div>
             </div>
             <div class="col d-flex justify-content-center align-items-center">
@@ -54,8 +65,14 @@
             </div>
             <div class="col d-flex justify-content-center align-items-center">
                 <div class="content-text text-white p-3" style="max-width: 530px;">
-                    <p class="h2">Paano Gumawa ng Plot</p>
-                    <p>Pumili ng lugar na patag upang maiwasan ang erosyon, may sapat na sikat ng araw, ngunit may lilim na bahagi rin para sa mga sensitibong tanim, may maayos na daloy ng tubig, at malapit sa bahay para sa madaliang pagpunta.</p>    
+                    <p class="h2 nexa-black">Hakbang 3: Paghahati sa Iba't Ibang Zone</p>
+                    <ul>
+                        <li>Zone 0: Ang bahay.</li>
+                        <li>Zone 1: Ang tanimang pinakalapit sa bahay, kung saan itinatanim ang mga madalas gamitin tulad ng gulay.</li>
+                        <li>Zone 2-3: Para sa mga hindi gaanong kailangan ng atensyon, tulad ng mga puno ng prutas.</li>
+                        <li>Zone 2-3: Para sa mga hindi gaanong kailangan ng atensyon, tulad ng mga puno ng prutas.</li>
+                        <li>Zone 4-5: Para sa wild areas o biodiversity zones na maaaring tumulong sa natural pest control at wildlife habitat.</li>
+                    </ul>   
                 </div>
             </div>
         </div>
@@ -68,8 +85,8 @@
             </div>
             <div class="col d-flex justify-content-center align-items-center">
                 <div class="content-text text-white p-3" style="max-width: 530px;">
-                    <p class="h2">Pagpili ng lokasyon</p>
-                    <p>Pumili ng lugar na patag upang maiwasan ang erosyon, may sapat na sikat ng araw, ngunit may lilim na bahagi rin para sa mga sensitibong tanim, may maayos na daloy ng tubig, at malapit sa bahay para sa madaliang pagpunta.</p>    
+                    <p class="h2 nexa-black">Hakbang 4: Pagbabalangkas ng Layout</p>
+                    <p>Magsagawa ng raised beds o mga kahong may lupa na nakalagay sa ibabaw ng lupa. Ang ganitong setup ay nagbibigay-daan sa mas magandang drainage, madaling kontrolin ang kondisyon ng lupa, at mas madaling abutin ng mga hardinero.</p>
                 </div>
             </div>
             <div class="col d-flex justify-content-center align-items-center">
@@ -81,21 +98,57 @@
     <section id="tut5" class="section">
         <div class="row m-0 vh-100">
             <div class="text-center top-buttons">
-                <form action="/complete-tutorial" method="post" class="text-center mt-4">
-                    <button type="submit" class="btn btn-light">Finish</button>
-                </form>
+                <a href="#tut5" class="btn btn-light">5</a>
             </div>
             <div class="col d-flex justify-content-center align-items-center">
-                <!-- Left side content if needed -->
-            </div>
-            <div class="col d-flex justify-content-center align-items-center">
-                <div class="content-text text-white p-3 mt-5" style="max-width: 530px;">
-                    <p class="h2">Paano Gumawa ng Plot</p>
-                    <p>Pumili ng lugar na patag upang maiwasan ang erosyon, may sapat na sikat ng araw, ngunit may lilim na bahagi rin para sa mga sensitibong tanim, may maayos na daloy ng tubig, at malapit sa bahay para sa madaliang pagpunta.</p>    
+                <div class="content-text text-white p-3" style="max-width: 530px;">
+                    <p class="h2 nexa-black">Hakbang 5: Paggamit ng Natural na Resources</p>
+                    <p>Ugaliin ang composting o ang paggamit ng mga kitchen scraps at yard waste upang gawing organikong pataba gayundin ang rainwater harvesting o pag-ipon ng tubig ulan para magamit sa pagdidilig o irigasyon.</p>
                 </div>
+            </div>
+            <div class="col d-flex justify-content-center align-items-center">
+                
             </div>
         </div>
     </section>
+
+    <section id="tut6" class="section">
+        <div class="row m-0 vh-100">
+            <div class="text-center top-buttons">
+                <a href="#tut5" class="btn btn-light">6</a>
+            </div>
+            <div class="col d-flex justify-content-center align-items-center">
+                <div class="content-text text-white p-3" style="max-width: 530px;">
+                    <p class="h2 nexa-black">Hakbang 6: Pag-set Up ng Proteksyon</p>
+                    <p>Maglagay ng windbreaks tulad ng mga halamang magsisilbing bakod upang maprotektahan ang mga tanim mula sa malalakas na hangin. Gumamit din ng natural na paraan ng pest control, tulad ng pag-aalaga ng mga hayop gaya ng manok o paglagay ng mga halamang natural na lumalaban sa peste.</p>
+                </div>
+            </div>
+            <div class="col d-flex justify-content-center align-items-center">
+                
+            </div>
+        </div>
+    </section>
+
+    <section id="tut7" class="section">
+        <div class="row m-0 vh-100">
+            <div class="text-center top-buttons">
+                <form action="/complete-tutorial" method="post" class="text-center">
+                    <button type="submit" class="btn btn-light">Finish</button>
+                </form>
+            </div>
+          
+            <div class="col d-flex justify-content-center align-items-center">
+                <div class="content-text text-white p-3" style="max-width: 530px;">
+                    <p class="h2 nexa-black">Hakbang 7: Pagsusuri at Pagpapanatili</p>
+                    <p>Obserbahan ang paglaki ng mga halaman at tiyaking sila ay tumatanggap ng tamang pangangalaga, tulad ng tamang irigasyon, pataba, at proteksyon mula sa peste. Batay sa mga natutunan mo habang lumalaki ang mga tanim, maaaring kailangan mong baguhin ang layout o sistema ng iyong plot upang mas mapabuti ang ani.</p>
+                </div>
+            </div>
+            <div class="col d-flex justify-content-center align-items-center">
+                
+            </div>
+        </div>
+    </section>
+
 
 </body>
 </html>
